--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="Contact" type="html" href="contact.html">
-    <link rel="Protfolio" type="html" href="portfolio.html">
+    <link rel="Portfolio" type="html" href="portfolio.html">
     <link rel="About" type="html" href="index.html">
     <title>Contact</title>
 </head>
@@ -23,7 +23,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Protfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-12">
                     <label for="inputMessage" class="form-label">Message</label>
-                    <input type="text" class="form-controla" id="inputMessage" placeholder="Hello...">
+                    <textarea class="form-controla" id="inputMessage">Hello...</textarea>
                 </div>
                 <div class="col-12">
                     <button type="submit" class="btn btn-primary">Submit</button>
