--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="Contact" type="html" href="contact.html">
-    <link rel="Protfolio" type="html" href="portfolio.html">
+    <link rel="Portfolio" type="html" href="portfolio.html">
     <link rel="About" type="html" href="index.html">
-    <title>Protfolio</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -23,7 +23,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Protfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -35,7 +35,7 @@
           </div>
         </div>
       </nav>
-      <h1>Protfolio</h1>
+      <h1>Portfolio</h1>
 
       <footer>
         <h4>KCH</h4>
