added bio, images, edited nav, moved h1

--- a/index.html
+++ b/index.html
@@ -29,20 +29,29 @@
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
             </ul>
           </div>
         </div>
     </nav>
     <h1>About Me</h1>
-    <div id="aboutme" width="350px" hieght="350px">
-        <p>Kayleigh Catherine Hanna...Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
+  <div class="container">
+    <div class="row">
+        <div class="col-lg-3">
+          <img class="img img-thumbnail" src="http://placehold.it/200x200">
+        </div>
+        <div class="col-lg-9">
+        </div>
+<div class="row">
+    <div class="col-lg-3">
+        <div id="aboutme" width="350px" hieght="350px">
+            <p>
+            Kayleigh Hanna graduated from Southwestern University magna cum laude with a BA in Communication and membership in the Communication, French and Leadership Honor Society.
+            Kayleigh currently lives and works in Austin, Texas; where she grew-up. 
+            In her free time Kayleigh takes her dog for walks, bakes, or practices knitting.
+            </p>
+        </div>
+  </div> 
+  </div>
     <footer>
         <h4>KCH</h4>
     </footer>
