--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,45 @@
         </div>
       </nav>
       <h1>Portfolio</h1>
-
+      <br>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-3">
+        <img class="img img-thumbnail" src="http://placehold.it/200x200">
+      </div>
+      <div class="col-lg-9">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-lg-3">
+        <img class="img img-thumbnail" src="http://placehold.it/200x200">
+      </div>
+      <div class="col-lg-9">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-lg-3">
+        <img class="img img-thumbnail" src="http://placehold.it/200x200">
+      </div>
+      <div class="col-lg-9">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-lg-3">
+        <img class="img img-thumbnail" src="http://placehold.it/200x200">
+      </div>
+      <div class="col-lg-9">
+      </div>
+    </div>
+    <br>
+  <br>
       <footer>
         <h4>KCH</h4>
       </footer>
