--- a/index.html
+++ b/index.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="Contact" type="html" href="contact.html">
     <link rel="Portfolio" type="html" href="portfolio.html">
     <link rel="About" type="html" href="index.html">
-
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Kayleigh Hanna</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
+            <a class="navbar-brand" href="#">Kayleigh Hanna</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <h1>About Me</h1>
-  <div class="container">
     <div class="row">
-        <div class="col-lg-3">
-          <img class="img img-thumbnail" src="http://placehold.it/200x200">
+        <div class="col-md-3">
+            <img src="http://placehold.it/200x200" alt="Placeholder" class="img-thumbnail">
         </div>
-        <div class="col-lg-9">
-        </div>
-<div class="row">
-    <div class="col-lg-3">
-        <div id="aboutme" width="350px" hieght="350px">
+        <div class="col-md-9">
             <p>
-            Kayleigh Hanna graduated from Southwestern University magna cum laude with a BA in Communication and membership in the Communication, French and Leadership Honor Society.
-            Kayleigh currently lives and works in Austin, Texas; where she grew-up. 
-            In her free time Kayleigh takes her dog for walks, bakes, or practices knitting.
+                Kayleigh Hanna graduated from Southwestern University magna cum laude with a BA in Communication and
+                membership in the Communication, French and Leadership Honor Society.
+                Kayleigh currently lives and works in Austin, Texas; where she grew-up.
+                In her free time Kayleigh takes her dog for walks, bakes, or practices knitting.
             </p>
         </div>
-  </div> 
-  </div>
+    </div>
+    </div>
     <footer>
         <h4>KCH</h4>
     </footer>
-    
+
 </body>
+
 </html>
