modified portfolio cards, fit to space

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,40 @@
     <h1>Portfolio</h1>
     <br>
     <div class="container">
-        <div class="row">
+        <!-- first card -->
+        <div class="card mb-3">
+            <img src="http://placehold.it/200x200" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+            </div>
+        </div>
+        <br>
+        <!-- second card -->
+        <div class="card mb-3">
+            <img src="http://placehold.it/200x200" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+            </div>
+        </div>
+        <br>
+        <!-- third card -->
+        <div class="card mb-3">
+            <img src="http://placehold.it/200x200" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+            </div>
+        </div>
+        <br>
+        <!-- <div class="row">
             <div class="col-lg-12">
             </div>
         </div>
@@ -73,7 +106,7 @@
             </div>
             <div class="col-lg-9">
             </div>
-        </div>
+        </div> -->
         <br>
         <br>
         <footer>
