added images, added text to portfolio, added link to download resume

--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@
             <p>
                 Kayleigh Hanna graduated from Southwestern University magna cum laude with a BA in Communication and
                 membership in the Communication, French and Leadership Honor Society.
-                Kayleigh currently lives and works in Austin, Texas; where she grew-up.
-                In her free time Kayleigh takes her dog for walks, bakes, or practices knitting.
+                Kayleigh currently lives and works in her hometown of Austin, Texas.
             </p>
+            <p>Click on the image to download my resume:<p>
+                <a href="Kayleigh Hanna.pdf" download>
+                  <img src="Kayleigh Hanna.pdf" alt="Resume" width="104" height="142">
+                </a>
         </div>
     </div>
     </div>
