--- a/portfolio.html
+++ b/portfolio.html
@@ -41,73 +41,33 @@
     <div class="container">
         <!-- first card -->
         <div class="card mb-3">
-            <img src="http://placehold.it/200x200" class="card-img-top" alt="...">
+            <img src="NonprofitLocator.jpeg" class="card-img-top" alt="Screen shot of Nonprofit Locator App">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+                <h5 class="card-title">Group Project: Nonprofit Locator</h5>
+                <p class="card-text">Kayleigh wrote the JavaScript for the application's Local Storage and the JavaScript behind the modal.</p>
                 <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
             </div>
         </div>
         <br>
         <!-- second card -->
         <div class="card mb-3">
-            <img src="http://placehold.it/200x200" class="card-img-top" alt="...">
+            <img src="PasswordGenerator.jpeg" class="card-img-top" alt="Screen shot of Password Generator">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+                <h5 class="card-title">Password Generator</h5>
+                <p class="card-text">This application allows the user generate a password based on the criteria they select.</p>
                 <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
             </div>
         </div>
         <br>
         <!-- third card -->
         <div class="card mb-3">
-            <img src="http://placehold.it/200x200" class="card-img-top" alt="...">
+            <img src="NewCodingGame.jpeg" class="card-img-top" alt="Screen shot of Coding Game">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+                <h5 class="card-title">Coding Game</h5>
+                <p class="card-text">This application tests the users knowledge of coding, allowing them to compare high scores.</p>
                 <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
             </div>
         </div>
-        <br>
-        <!-- <div class="row">
-            <div class="col-lg-12">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-3">
-                <img class="img img-thumbnail" src="http://placehold.it/200x200">
-            </div>
-            <div class="col-lg-9">
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-lg-3">
-                <img class="img img-thumbnail" src="http://placehold.it/200x200">
-            </div>
-            <div class="col-lg-9">
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-lg-3">
-                <img class="img img-thumbnail" src="http://placehold.it/200x200">
-            </div>
-            <div class="col-lg-9">
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-lg-3">
-                <img class="img img-thumbnail" src="http://placehold.it/200x200">
-            </div>
-            <div class="col-lg-9">
-            </div>
-        </div> -->
-        <br>
         <br>
         <footer>
             <h4>KCH</h4>
