--- a/index.html
+++ b/index.html
@@ -47,12 +47,21 @@
                 membership in the Communication, French and Leadership Honor Society.
                 Kayleigh currently lives and works in her hometown of Austin, Texas.
             </p>
-            <p>Click on the image to download my resume:<p>
+            <br>
+            <p>Click on the image to download my resume:
+            
                 <a href="Kayleigh Hanna.pdf" download>
-                  <img src="Kayleigh Hanna.pdf" alt="Resume" width="104" height="142">
+                    <img src="http://placehold.it/200x200" alt="Resume" width="104" height="142">
                 </a>
-        </div>
-    </div>
+            </p>
+            <p> Find me on Github:
+                 <a href="https://github.com/K-league">K-League</a>
+             </p>
+             <p> Find me on LinkedIn:
+                <a href="https://www.linkedin.com/in/kayleighchanna/">Kayleigh C Hanna</a>
+            </p>
+     </div>
+
     </div>
     <footer>
         <h4>KCH</h4>
