resturctured assets, added pjct 2

--- a/index.html
+++ b/index.html
@@ -43,14 +43,16 @@
         </div>
         <div class="col-md-9">
             <p>
-                Kayleigh Hanna graduated from Southwestern University magna cum laude with a BA in Communication and
-                membership in the Communication, French and Leadership Honor Society.
-                Kayleigh currently lives and works in her hometown of Austin, Texas.
+                Full stack web developer leveraging a background in information quality assurance provides a unique perspective on handling user data. 
+                I am currently completing a certificate in full stack development from the University of Texas at Austin Coding Boot Camp. 
+                Strong communicator who is passionate about developing people-friendly platforms that put user security and high-quality information management first. 
+                Strengths in collaboration, communication, and teamwork. With these newly developed skills in JavaScript, ES6, Github, UX,  HTML5, CSS, Boostrap, MySQL, Node, and Express, I want to handle client data accurately and optimize user experience while minimizing error. 
+                Recently, I have applied my knowledge of RESTful CRUD operations that allow e-commerce business owners to compete using the latest technologies.
             </p>
             <br>
             <p>Click on the image to download my resume:
             
-                <a href="Kayleigh Hanna.pdf" download>
+                <a href="./assets/Kayleigh Hanna.pdf" download>
                     <img src="http://placehold.it/200x200" alt="Resume" width="104" height="142">
                 </a>
             </p>
