--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,17 @@
     <div class="container">
         <!-- first card -->
         <div class="card mb-3">
-            <img src="NonprofitLocator.jpeg" class="card-img-top" alt="Screen shot of Nonprofit Locator App">
+            <img src="./assets/CURATIO.png" class="card-img-top" alt="Screen shot of Nonprofit Locator App">
+            <div class="card-body">
+                <h5 class="card-title">Group Project: CURATIO</h5>
+                <p class="card-text">Using Google Cloud Platform, Kayleigh implemented Nodemailer. Kayleigh also developed the models.</p>
+                <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+            </div>
+        </div>
+        <br>
+        <!-- second card -->
+        <div class="card mb-3">
+            <img src="./assets/NonprofitLocator.jpeg" class="card-img-top" alt="Screen shot of Nonprofit Locator App">
             <div class="card-body">
                 <h5 class="card-title">Group Project: Nonprofit Locator</h5>
                 <p class="card-text">Kayleigh wrote the JavaScript for the application's Local Storage and the JavaScript behind the modal.</p>
@@ -49,9 +59,9 @@
             </div>
         </div>
         <br>
-        <!-- second card -->
+        <!-- third card -->
         <div class="card mb-3">
-            <img src="PasswordGenerator.jpeg" class="card-img-top" alt="Screen shot of Password Generator">
+            <img src="./assets/PasswordGenerator.jpeg" class="card-img-top" alt="Screen shot of Password Generator">
             <div class="card-body">
                 <h5 class="card-title">Password Generator</h5>
                 <p class="card-text">This application allows the user generate a password based on the criteria they select.</p>
@@ -59,9 +69,9 @@
             </div>
         </div>
         <br>
-        <!-- third card -->
+        <!-- fourth card -->
         <div class="card mb-3">
-            <img src="NewCodingGame.jpeg" class="card-img-top" alt="Screen shot of Coding Game">
+            <img src="./assets/NewCodingGame.jpeg" class="card-img-top" alt="Screen shot of Coding Game">
             <div class="card-body">
                 <h5 class="card-title">Coding Game</h5>
                 <p class="card-text">This application tests the users knowledge of coding, allowing them to compare high scores.</p>
