Removing ignored files

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,8 @@
             <img src="./assets/CURATIO.png" class="card-img-top" alt="Screen shot of Nonprofit Locator App">
             <div class="card-body">
                 <h5 class="card-title">Group Project: CURATIO</h5>
-                <p class="card-text">Using Google Cloud Platform, Kayleigh implemented Nodemailer. Kayleigh also developed the models.</p>
+                <p class="card-text">Using Google Cloud Platform, Kayleigh implemented Nodemailer. Kayleigh also
+                    developed the models.</p>
                 <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
             </div>
         </div>
@@ -54,7 +55,8 @@
             <img src="./assets/NonprofitLocator.jpeg" class="card-img-top" alt="Screen shot of Nonprofit Locator App">
             <div class="card-body">
                 <h5 class="card-title">Group Project: Nonprofit Locator</h5>
-                <p class="card-text">Kayleigh wrote the JavaScript for the application's Local Storage and the JavaScript behind the modal.</p>
+                <p class="card-text">Kayleigh wrote the JavaScript for the application's Local Storage and the
+                    JavaScript behind the modal.</p>
                 <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
             </div>
         </div>
@@ -64,7 +66,8 @@
             <img src="./assets/PasswordGenerator.jpeg" class="card-img-top" alt="Screen shot of Password Generator">
             <div class="card-body">
                 <h5 class="card-title">Password Generator</h5>
-                <p class="card-text">This application allows the user generate a password based on the criteria they select.</p>
+                <p class="card-text">This application allows the user generate a password based on the criteria they
+                    select.</p>
                 <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
             </div>
         </div>
@@ -74,7 +77,8 @@
             <img src="./assets/NewCodingGame.jpeg" class="card-img-top" alt="Screen shot of Coding Game">
             <div class="card-body">
                 <h5 class="card-title">Coding Game</h5>
-                <p class="card-text">This application tests the users knowledge of coding, allowing them to compare high scores.</p>
+                <p class="card-text">This application tests the users knowledge of coding, allowing them to compare high
+                    scores.</p>
                 <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
             </div>
         </div>
