--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h1>About Me</h1>
     <div class="row">
         <div class="col-md-3">
-            <img src="http://placehold.it/200x200" alt="Placeholder" class="img-thumbnail">
+            <img src="./assets/KCH copy.jpeg" alt="Placeholder" class="img-thumbnail">
         </div>
         <div class="col-md-9">
             <p>
